# wpilib-rust

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: rust-build.yml
scripts/: .gitignore  REQUIREMENTS.txt  commit.py  setup.py
wpilib/: Cargo.toml
wpilib-macros/: Cargo.toml
wpilib-macros/src/: lib.rs
wpilib-math/: Cargo.toml
wpilib-math/src/: lib.rs
wpilib-rs/: Cargo.toml
wpilib-rs/src/: Robot.rs  lib.rs  robots.rs
wpilib-rs/src/command/: commands.rs  manager.rs  mod.rs  scheduler.rs  test.rs  traits.rs
wpilib/src/: lib.rs  macros.rs  robots.rs
wpilib/src/command/: commands.rs  conditions.rs  macros.rs  manager.rs  mod.rs  subsystem.rs  test.rs
wpilib/src/math/: mod.rs  units.rs
wpilib/src/math/controllers/: bang_bang.md  bang_bang.rs  controller.rs  feed_forward.rs  lqr.rs  mod.rs  pid.md  pid.rs  test.rs
wpilib/src/math/filter/: debouncer.rs  slew_rate_limiter.rs
wpilib/src/math/geometry/: mod.rs  pose2d.rs  pose3d.rs  rotation2d.rs  rotation3d.rs  test.rs  transform2d.rs  transform3d.rs  translation2d.rs  translation3d.rs  twist2d.rs  twist3d.rs
wpilib/src/math/streams/: controllers.rs  filter.rs  mod.rs  stream.rs
wpilib/src/math/units/: angle.rs  angular_acceleration.rs  angular_velocity.rs  data.rs  data_rate.rs  distance.rs  energy.rs  linear_velocity.rs  mass.rs  mod.rs  moment_of_inertia.rs  temperature.rs  test.rs  time.rs  torque.rs
wpilib/src/math/util/: math_util.rs
