[package]
name = "wpilib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
network-tables = { git = "https://github.com/oh-yes-0-fps/network-tables-rs", version = "^0.1", features = [ "client-v4", "tracing" ] }
wpilog = { git = "https://github.com/oh-yes-0-fps/wpilog-rs", version = "^0.1", features = [ "tracing" ] }
serde_json = "^1"
serde-protobuf = "^0.8"
serde = { version = "^1", features = ["derive"] }
# tokio = { version = "1.28.2", features = ["rt", "sync", "net", "time", "macros", "rt-multi-thread", "parking_lot", "tracing" ] }
rmpv = "1.0.0"
single_value_channel = "1.2.2"
chrono = "0.4.26"
thiserror = "1.0.40"
no-panic = "0.1"

once_cell = "1.18.0"
parking_lot = "0.12.1"

tracing = "^0.1"
tracing-subscriber = "^0.3"
tracing-appender = "^0.2"

wpilib-macros = { path = "../wpilib-macros", version = "0.1.0" }

#math
nalgebra = "0.32.2"
num = "0.4.0"
simba = "0.8.1"

[lib]
crate-type = ["cdylib"]

[features]
default = ["command"]
# tracing_feature = ["tracing", "tracing-subscriber", "tracing-appender"]
command = []
multi-thread = []
simulation = []
