[package]
name = "wpilib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

single_value_channel = "1.2.2"

thiserror = "1.0.40"
no-panic = "0.1"

network-tables = { git = "https://github.com/oh-yes-0-fps/network-tables-rs", version = "^0.1", features = [ "client-v4", "tracing" ] }
rmpv = "1.0.0"
wpilog = { git = "https://github.com/oh-yes-0-fps/wpilog-rs", version = "^0.1", features = [ "tracing" ] }
serde_json = "^1"
serde-protobuf = "^0.8"
serde = { version = "^1", features = ["derive"] }

once_cell = "1.18.0"
parking_lot = "0.12.1"

tracing = "^0.1"
tracing-subscriber = "^0.3"
tracing-appender = "^0.2"

#math
nalgebra = "0.32.2"
num = "0.4.0"
simba = "0.8.1"

wpilib-macros = { path = "../wpilib-macros", version = "0.1.0" }

[lib]
crate-type = ["cdylib"]

[features]
default = ["command", "rio"]
test = ["command", "simulation"]

command = []

simulation = []
rio = []
linux_box = []
